--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.3 2009/09/29 09:59:32 ith Exp $
+% $Id: perts.tex,v 1.4 2009/09/29 10:24:58 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.3 2009/09/29 09:59:32 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.4 2009/09/29 10:24:58 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -136,7 +136,7 @@ and the next stages of this work in Section \ref{sec:disc-num}.
 
 Throughout this paper we set $\hbar=c=1$ and use the reduced
 Planck mass $\Mpl=\sqrt{8\pi G}$. Overdots and primes denote
-differentiation with respect to our time variable $n$ (the number of
+differentiation with respect to our time variable $\N$ (the number of
 e-foldings) and conformal time $\eta$, respectively, and will be
 defined explicitly when first used.  We will work in a flat
 Friedmann-Robertson-Walker (FRW) background.
