--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.46 2009/09/28 15:52:41 ith Exp $
+% $Id: multibrane.tex,v 1.47 2009/09/29 10:50:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.46 2009/09/28 15:52:41 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.47 2009/09/29 10:50:25 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -700,7 +700,7 @@ which becomes $N \, \gsim \, 10^2$ for $1-n_s \simeq 0.05$ and $\fnleq<-5$.
 
 In general, however, the $K$ and $M$ units of flux are not independent. 
 F-theory compactification on Calabi-Yau four-folds
-provides a geometric way of parameterizing  
+provides a geometric way of parametrizing  
 type IIB string compactifications
 \cite{witten1,witten2,witten3,sethi,gkp,klemm}. 
 Global tadpole cancellation constrains the topology of the four-fold
@@ -755,7 +755,7 @@ incompatible with the generalized BM bound.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 The coincident brane model outlined in Section~\ref{sec:multibranes-multi}
 takes a significantly different form if instead of assuming a large number of
-coincident branes there are now only a small finite number. The presciption for
+coincident branes there are now only a small finite number. The prescription for
 the symmetrised trace given in Eqs.~\eqref{eq:str-even-multi} and
 \eqref{eq:str-odd-multi} must be used and $\rho$ is determined from
 \eq{eq:finiten-rho-multi}. 
