--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,10 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.1 2009/10/05 11:16:57 ith Exp $
+% $Id: results.tex,v 1.2 2009/10/05 11:17:43 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id:results.tex,v 1.0 2009/09/29 10:40:20
-ith Exp  $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.2 2009/10/05 11:17:43 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
