Added new sections. Still need to change all labels to be consistent.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.13 2009/10/05 11:16:57 ith Exp $
+% $Id: numerical.tex,v 1.14 2009/10/05 11:21:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.13 2009/10/05 11:16:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.14 2009/10/05 11:21:28 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -653,3 +653,12 @@ our results in the next section.
 % 
 % 
 % 
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\section{Discussion}
+\label{sec:disc-numerical}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
