--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.6 2009/09/29 11:12:59 ith Exp $
+% $Id: perts.tex,v 1.7 2009/10/05 11:21:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.6 2009/09/29 11:12:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.7 2009/10/05 11:21:28 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -486,3 +486,28 @@ order equation (\ref{eq:fokg}) and the background equation
 (\ref{eq:KGback-num}). In the next section we set up the correct form of
 these equations for the numerical simulation and discuss the
 implementation and some tests of the accuracy of the method.
+% 
+% 
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\section{Observable quantities}
+\label{sec:observable-perts}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+
+% 
+% 
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\section{Discussion}
+\label{sec:disc-perts}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
