Change to using the subfig package instead of subfigure. Realigned subfigures throughout.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.14 2009/10/05 11:21:28 ith Exp $
+% $Id: numerical.tex,v 1.15 2009/10/05 15:19:58 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.14 2009/10/05 11:21:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.15 2009/10/05 15:19:58 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -372,7 +372,7 @@ system are then set as outlined above.
 %
 \begin{figure}
 \centering
- \includegraphics[scale=0.8]{./numerical/graphs/bgepsilon}
+ \includegraphics[width=\textwidth]{./numerical/graphs/bgepsilon}
  \caption{The end of inflation is determined by calculating when
    $\varepsilon_H=-\dN{H}/H=1$ (red dashed line). Along the $x$-axis,
    $\N$ is the number of e-foldings from the start of the
@@ -505,22 +505,21 @@ range, $K_3$, has a larger $k$ mode step size $\Delta k = 1\e{-60}\Mpl = 3.8\e{-
 covers a greater range than the others, extending to much smaller scales than WMAP can observe.
 
 \begin{figure}
+\centering
 % 
- \subfigure[The relative error for different $N_\theta$, the number of discretised $\theta$s,
- keeping the other
-parameters fixed and using the $K_3$ range. The upper blue line ($N_\theta=129$)
-and middle green line
- ($N_\theta=257$) have relative errors at least an order of magnitude larger than the lower red
-line
-($N_\theta=513$).]{
- \includegraphics[scale=0.8]{numerical/graphs/err-nthetas-small.pdf}
+ \subfloat[The relative error for different $N_\theta$, the number of
+discretised $\theta$s, keeping the other parameters fixed and using the $K_3$
+range. The upper blue line ($N_\theta=129$) and middle green line
+ ($N_\theta=257$) have relative errors at least an order of magnitude larger
+than the lower red line ($N_\theta=513$).]{
+ \includegraphics[width=0.43\textwidth]{numerical/graphs/err-nthetas-small.pdf}
  \label{fig:err-nthetas}
-}
+}\qquad
 % 
-\subfigure[The relative error for the 3 different $k$ ranges $K1$, $K2$,
+\subfloat[The relative error for the 3 different $k$ ranges $K1$, $K2$,
 $K3$ (starting from the left). The parameter $\Delta k$
 is set equal to $1\e{-61}\Mpl, 3\e{-61}\Mpl, 1\e{-60}\Mpl$ respectively.]{
- \includegraphics[scale=0.8]{numerical/graphs/err-kranges-small.pdf}
+ \includegraphics[width=0.43\textwidth]{numerical/graphs/err-kranges-small.pdf}
  \label{fig:err-kranges}
 }
 % 
@@ -579,7 +578,7 @@ we will keep it constant throughout.
 
 \begin{figure}
  \centering
- \includegraphics[scale=0.8]{numerical/graphs/err-deltak4.pdf}
+ \includegraphics[width=\textwidth]{numerical/graphs/err-deltak4.pdf}
  \caption{The relative error in convolution term $A$ for different values of $\Delta k$.
 The other parameters are fixed: $\kmin=1\times10^{-60}\Mpl, N_k = 1025$ and $N_\theta=513$. The
 upper 
@@ -629,7 +628,7 @@ very similar for higher values (not shown in the figure).
 
 \begin{figure}
  \centering
- \includegraphics[scale=0.8]{numerical/graphs/err-deltak-kmin.pdf}
+ \includegraphics[width=\textwidth]{numerical/graphs/err-deltak-kmin.pdf}
  % err-deltak-kmin.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=
  \caption{The relative error of the convolution term for three different values of $\Delta k$. In
 contrast to Figure~\ref{fig:err-deltaks} $\kmin=1\e{-61}\Mpl=3.8\e{-5}\Mpc^{-1} \le \Delta k$ for
